[gd_scene load_steps=40 format=3 uid="uid://bim2khteqjvpf"]

[ext_resource type="Texture2D" uid="uid://drdonhsgd36qq" path="res://backgroundd/7th Page UI (1).png" id="1_ppmse"]
[ext_resource type="Texture2D" uid="uid://ca457ryd3vf2d" path="res://gameplayAnimation/(No BG) Gameplay.png" id="2_qrxww"]
[ext_resource type="Texture2D" uid="uid://dbtxkqyf3ucvh" path="res://GAME BUTTONS/ROCK(DEFAULT).png" id="7_iwmrq"]
[ext_resource type="Texture2D" uid="uid://cmm6n7ltcjx2t" path="res://GAME BUTTONS/ROCK(HOVER).png" id="8_hh7fb"]
[ext_resource type="Script" path="res://gameplay.gd" id="8_nenia"]
[ext_resource type="Texture2D" uid="uid://c3s5n22h0sfgp" path="res://GAME BUTTONS/ROCK(HOVER)2.png" id="9_hmq3q"]
[ext_resource type="Texture2D" uid="uid://bloxokocxesd8" path="res://GAME BUTTONS/SCISSORS(DEFAULT).png" id="10_6ajhj"]
[ext_resource type="Texture2D" uid="uid://4wj3nsdahxje" path="res://GAME BUTTONS/PAPER(PLACEHOLDER).png" id="11_bo4ig"]
[ext_resource type="Texture2D" uid="uid://dfp748sg5iqni" path="res://GAME BUTTONS/SCISSORS(HOVER)2.png" id="12_oorm1"]
[ext_resource type="Texture2D" uid="uid://c8ydarhy1lt53" path="res://GAME BUTTONS/WATER(DEFAULT).png" id="12_rftqh"]
[ext_resource type="Texture2D" uid="uid://n80vbsb35cxm" path="res://GAME BUTTONS/WATER(HOVER).png" id="13_x4d6t"]
[ext_resource type="Texture2D" uid="uid://dcg4iuicb0att" path="res://GAME BUTTONS/WIND(DEFAULT).png" id="14_2macd"]
[ext_resource type="Texture2D" uid="uid://b0iivlv80t5jf" path="res://GAME BUTTONS/WATER(HOVER)2.png" id="15_ciw5e"]
[ext_resource type="Texture2D" uid="uid://dj3dvyota7lb1" path="res://GAME BUTTONS/FIRE(DEFAULT).png" id="16_knkpm"]
[ext_resource type="Texture2D" uid="uid://ceykk01wdy0vd" path="res://GAME BUTTONS/WIND(HOVER)2.png" id="17_iklsa"]
[ext_resource type="Texture2D" uid="uid://delt0ktkcgcf5" path="res://GAME BUTTONS/ELECTRIC(DEFAULT).png" id="18_3yh51"]
[ext_resource type="Texture2D" uid="uid://c66vtpiqmsweg" path="res://GAME BUTTONS/FIRE(HOVER)2.png" id="19_6mku0"]
[ext_resource type="Texture2D" uid="uid://qub738hpxa6f" path="res://GAME BUTTONS/DEVIL(DEFAULT).png" id="20_5twku"]
[ext_resource type="Texture2D" uid="uid://cd73xqu04nwa3" path="res://sprites/boss/Dragon2.png" id="21_68e7a"]
[ext_resource type="Texture2D" uid="uid://bp13cy6xm4sua" path="res://GAME BUTTONS/ELECTRIC(HOVER)2.png" id="21_yws5l"]
[ext_resource type="Texture2D" uid="uid://srqm5gctv7ab" path="res://sprites/boss/Dragon.png" id="22_gam5d"]
[ext_resource type="Texture2D" uid="uid://y2qa5xna2ywe" path="res://backgroundd/2 (Full Screen) 'You Won' Pop-Up (2).png" id="23_3s5d5"]
[ext_resource type="Texture2D" uid="uid://dnpbhxapvsl75" path="res://GAME BUTTONS/DEVIL(HOVER)2.png" id="23_v5k2x"]
[ext_resource type="Texture2D" uid="uid://cskrcvw7axlqg" path="res://buttons/(No BG) Play Again.png" id="24_d0iqd"]
[ext_resource type="Texture2D" uid="uid://q67pfcgx5ob2" path="res://buttons/(No BG) Play Again (2).png" id="25_v1dx1"]
[ext_resource type="Texture2D" uid="uid://x60bdmcms47f" path="res://buttons/(No BG) Pause - Leave.png" id="26_7t7os"]
[ext_resource type="Texture2D" uid="uid://c62vu3bgox4wp" path="res://buttons/(Hover) Pause - Leave.png" id="27_4ov6y"]
[ext_resource type="Texture2D" uid="uid://cr6c2wcubhf5a" path="res://backgroundd/2 (Full Screen) 'You Won' Pop-Up (3).png" id="28_mfdgi"]
[ext_resource type="Texture2D" uid="uid://b76uekc6qt8s0" path="res://buttons/(No BG) Pause Button.png" id="30_bbfju"]
[ext_resource type="Texture2D" uid="uid://ktqdvnms1qj7" path="res://buttons/(hover) Pause Button.png" id="31_uma23"]
[ext_resource type="Texture2D" uid="uid://uxwrmh5h17wb" path="res://backgroundd/(No BG) Pause Pop-Up.png" id="32_od133"]
[ext_resource type="Texture2D" uid="uid://syu6vse20hmt" path="res://buttons/(No BG) Pause - Continue.png" id="33_i3ew5"]
[ext_resource type="Texture2D" uid="uid://cvgjhwd4mdcu1" path="res://buttons/(Hover) Pause - Continue.png" id="34_pfvri"]
[ext_resource type="Script" path="res://player_score.gd" id="34_twy1p"]
[ext_resource type="Script" path="res://comp_score.gd" id="35_vvvev"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5hoke"]
texture = ExtResource("1_ppmse")
modulate_color = Color(0.808998, 0.808998, 0.808998, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yy175"]
texture = ExtResource("2_qrxww")

[sub_resource type="SpriteFrames" id="SpriteFrames_l6xda"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_68e7a")
}, {
"duration": 1.0,
"texture": ExtResource("21_68e7a")
}, {
"duration": 1.0,
"texture": ExtResource("21_68e7a")
}, {
"duration": 1.0,
"texture": ExtResource("21_68e7a")
}, {
"duration": 1.0,
"texture": ExtResource("21_68e7a")
}, {
"duration": 1.0,
"texture": ExtResource("22_gam5d")
}, {
"duration": 1.0,
"texture": ExtResource("22_gam5d")
}, {
"duration": 1.0,
"texture": ExtResource("22_gam5d")
}, {
"duration": 1.0,
"texture": ExtResource("21_68e7a")
}],
"loop": true,
"name": &"boss_animation",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_78kp3"]
bg_color = Color(0.0117647, 0.0117647, 0.0117647, 1)

[node name="Gameplay" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("8_nenia")

[node name="ui" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 1153.0
offset_bottom = 647.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_5hoke")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 43.0
offset_top = 427.0
offset_right = 1227.0
offset_bottom = 555.0
scale = Vector2(0.9, 0.9)
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Rock" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("7_iwmrq")
texture_pressed = ExtResource("8_hh7fb")
texture_hover = ExtResource("9_hmq3q")
script = ExtResource("8_nenia")

[node name="Scissors" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("10_6ajhj")
texture_pressed = ExtResource("12_oorm1")
texture_hover = ExtResource("12_oorm1")
script = ExtResource("8_nenia")

[node name="Paper" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("11_bo4ig")
script = ExtResource("8_nenia")

[node name="Water" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("12_rftqh")
texture_pressed = ExtResource("15_ciw5e")
texture_hover = ExtResource("15_ciw5e")
script = ExtResource("8_nenia")

[node name="Air" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("14_2macd")
texture_pressed = ExtResource("17_iklsa")
texture_hover = ExtResource("17_iklsa")
script = ExtResource("8_nenia")

[node name="Fire" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("16_knkpm")
texture_pressed = ExtResource("19_6mku0")
texture_hover = ExtResource("19_6mku0")
script = ExtResource("8_nenia")

[node name="Lightning" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("18_3yh51")
texture_pressed = ExtResource("21_yws5l")
texture_hover = ExtResource("21_yws5l")
script = ExtResource("8_nenia")

[node name="Devil" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("20_5twku")
texture_pressed = ExtResource("23_v5k2x")
texture_hover = ExtResource("23_v5k2x")
script = ExtResource("8_nenia")

[node name="Dragon" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("12_rftqh")
texture_pressed = ExtResource("13_x4d6t")
script = ExtResource("8_nenia")

[node name="bg1" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 647.0
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_yy175")

[node name="boss_animation" type="AnimatedSprite2D" parent="."]
position = Vector2(948, 161)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_l6xda")
animation = &"boss_animation"
autoplay = "boss_animation"
frame_progress = 0.92094

[node name="youWon" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_right = 3351.0
offset_bottom = 1885.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.343, 0.343)
size_flags_vertical = 4
texture = ExtResource("23_3s5d5")

[node name="HBoxContainer" type="HBoxContainer" parent="youWon"]
layout_mode = 0
offset_left = 1084.55
offset_top = 1084.55
offset_right = 1516.55
offset_bottom = 1282.55
scale = Vector2(3, 3)

[node name="Play Again" type="TextureButton" parent="youWon/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("24_d0iqd")
texture_pressed = ExtResource("25_v1dx1")
texture_hover = ExtResource("25_v1dx1")
script = ExtResource("8_nenia")

[node name="Leave" type="TextureButton" parent="youWon/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("26_7t7os")
texture_pressed = ExtResource("27_4ov6y")
texture_hover = ExtResource("27_4ov6y")
script = ExtResource("8_nenia")

[node name="youLose" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 0.999998
offset_right = 3351.0
offset_bottom = 1885.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.343, 0.343)
size_flags_vertical = 4
texture = ExtResource("28_mfdgi")

[node name="HBoxContainer" type="HBoxContainer" parent="youLose"]
layout_mode = 0
offset_left = 1084.55
offset_top = 1084.55
offset_right = 1516.55
offset_bottom = 1282.55
scale = Vector2(3, 3)

[node name="Play Again" type="TextureButton" parent="youLose/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("24_d0iqd")
texture_pressed = ExtResource("25_v1dx1")
texture_hover = ExtResource("25_v1dx1")
script = ExtResource("8_nenia")

[node name="Leave" type="TextureButton" parent="youLose/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("26_7t7os")
texture_pressed = ExtResource("27_4ov6y")
texture_hover = ExtResource("27_4ov6y")
script = ExtResource("8_nenia")

[node name="youTied" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 0.999998
offset_right = 3351.0
offset_bottom = 1885.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.343, 0.343)
size_flags_vertical = 4
texture = ExtResource("28_mfdgi")

[node name="HBoxContainer" type="HBoxContainer" parent="youTied"]
layout_mode = 0
offset_left = 1084.55
offset_top = 1084.55
offset_right = 1516.55
offset_bottom = 1282.55
scale = Vector2(3, 3)

[node name="Play Again" type="TextureButton" parent="youTied/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("24_d0iqd")
texture_pressed = ExtResource("25_v1dx1")
texture_hover = ExtResource("25_v1dx1")
script = ExtResource("8_nenia")

[node name="Leave" type="TextureButton" parent="youTied/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("26_7t7os")
texture_pressed = ExtResource("27_4ov6y")
texture_hover = ExtResource("27_4ov6y")
script = ExtResource("8_nenia")

[node name="pauseButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 19.0
offset_right = 163.0
offset_bottom = 147.0
scale = Vector2(0.35, 0.35)
texture_normal = ExtResource("30_bbfju")
texture_pressed = ExtResource("31_uma23")
texture_hover = ExtResource("31_uma23")
script = ExtResource("8_nenia")

[node name="pausePanel" type="Panel" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 115.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(10, 10)
theme_override_styles/panel = SubResource("StyleBoxFlat_78kp3")

[node name="pauseRect" type="TextureRect" parent="pausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.3
offset_top = -32.3
offset_right = 3302.7
offset_bottom = 1857.7
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.034, 0.034)
size_flags_vertical = 4
texture = ExtResource("32_od133")

[node name="HBoxContainer" type="HBoxContainer" parent="pausePanel/pauseRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -863.673
offset_top = -255.496
offset_right = -523.673
offset_bottom = -160.496
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)

[node name="Continue" type="TextureButton" parent="pausePanel/pauseRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("33_i3ew5")
texture_pressed = ExtResource("34_pfvri")
texture_hover = ExtResource("34_pfvri")
script = ExtResource("8_nenia")

[node name="Leave" type="TextureButton" parent="pausePanel/pauseRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("26_7t7os")
texture_pressed = ExtResource("27_4ov6y")
texture_hover = ExtResource("27_4ov6y")
script = ExtResource("8_nenia")

[node name="ScoreBoardControl" type="Control" parent="."]
anchors_preset = 0
offset_left = 35.0
offset_top = 20.0
offset_right = 348.0
offset_bottom = 322.0

[node name="PlayerScore" type="RichTextLabel" parent="ScoreBoardControl"]
layout_mode = 0
offset_left = 88.0
offset_top = 88.0
offset_right = 154.0
offset_bottom = 137.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Player:
0 / 5"
script = ExtResource("34_twy1p")

[node name="CompScore" type="RichTextLabel" parent="ScoreBoardControl"]
layout_mode = 0
offset_left = 89.0
offset_top = 155.0
offset_right = 183.0
offset_bottom = 235.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Computer:
0 / 5"
script = ExtResource("35_vvvev")

[connection signal="pressed" from="HBoxContainer/Rock" to="." method="_on_rock_pressed"]
[connection signal="pressed" from="HBoxContainer/Scissors" to="." method="_on_scissors_pressed"]
[connection signal="pressed" from="HBoxContainer/Paper" to="." method="_on_paper_pressed"]
[connection signal="pressed" from="HBoxContainer/Water" to="." method="_on_water_pressed"]
[connection signal="pressed" from="HBoxContainer/Air" to="." method="_on_air_pressed"]
[connection signal="pressed" from="HBoxContainer/Fire" to="." method="_on_fire_pressed"]
[connection signal="pressed" from="HBoxContainer/Lightning" to="." method="_on_lightning_pressed"]
[connection signal="pressed" from="HBoxContainer/Devil" to="." method="_on_devil_pressed"]
[connection signal="pressed" from="HBoxContainer/Dragon" to="." method="_on_dragon_pressed"]
[connection signal="pressed" from="youWon/HBoxContainer/Play Again" to="." method="_on_playagain_pressed"]
[connection signal="pressed" from="youWon/HBoxContainer/Leave" to="." method="_on_mainmenu_pressed"]
[connection signal="pressed" from="youLose/HBoxContainer/Play Again" to="." method="_on_playagain_pressed"]
[connection signal="pressed" from="youLose/HBoxContainer/Leave" to="." method="_on_mainmenu_pressed"]
[connection signal="pressed" from="youTied/HBoxContainer/Play Again" to="." method="_on_playagain_pressed"]
[connection signal="pressed" from="youTied/HBoxContainer/Leave" to="." method="_on_mainmenu_pressed"]
[connection signal="pressed" from="pauseButton" to="pausePanel/pauseRect/HBoxContainer/Continue" method="_on_pause_button_pressed"]
[connection signal="pressed" from="pausePanel/pauseRect/HBoxContainer/Continue" to="pauseButton" method="_on_continue_pressed"]
[connection signal="pressed" from="pausePanel/pauseRect/HBoxContainer/Leave" to="." method="_on_mainmenu_pressed"]
